# Spotifun-DS-Project

./: .gitignore  CMakeLists.txt
include/: Artist.h  ArtistManager.h  DataStructures.h  Music.h  Playlist.h  PlaylistManager.h  SpotifunManager.h
src/: Artist.cpp  ArtistManager.cpp  Music.cpp  Playlist.cpp  SpotifunManager.cpp  Stack.cpp  main.cpp
